# linkedapi-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yaml
linkedapi/: __init__.py  client.py  config.py  errors.py
linkedapi/admin/: __init__.py  accounts.py  admin.py  http_client.py  limits.py  subscription.py  webhooks.py
linkedapi/core/: __init__.py  operation.py  polling.py
linkedapi/http/: __init__.py  base.py  linked_api_http_client.py
linkedapi/mappers/: __init__.py  array.py  base.py  send_message.py  simple.py  then.py  void.py
linkedapi/operations/: __init__.py  accept_connection_request.py  accept_invitation.py  check_connection_status.py  comment_on_post.py  create_post.py  custom_workflow.py  fetch_company.py  fetch_job.py  fetch_person.py  fetch_post.py  ignore_connection_request.py  ignore_invitation.py  manage_conversation.py  nv_fetch_company.py  nv_fetch_person.py  nv_manage_conversation.py  nv_search_companies.py  nv_search_people.py  nv_send_message.py  nv_sync_conversation.py  nv_sync_inbox.py  react_to_comment.py  react_to_post.py  remove_connection.py  reply_to_comment.py  retrieve_connection_requests.py  retrieve_connections.py  retrieve_feed.py  retrieve_invitations.py  retrieve_pending_requests.py  retrieve_performance.py  retrieve_ssi.py  search_companies.py  search_jobs.py  search_people.py  send_connection_request.py  sync_inbox.py  (+4 more)
tests/: conftest.py  test_admin.py  test_direct_methods.py  test_errors.py  test_http_client.py  test_mappers.py  test_models.py  test_operations.py  test_polling.py  test_webhooks.py
(+25 files in other folders)
